--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,11 @@ ul li {
   border-bottom: 1px solid #cccccc;
 }
 
+li.post-item, li.post-item-title {
+  list-style: none;
+  padding:5px 0;
+}
+
 ul li:last-child {
   border-bottom: none;
 }
@@ -81,6 +86,21 @@ a.user-profile-link::before {
   font-size:1.1rem;
   border-bottom: 1px solid #cccccc;
   padding-bottom: 5px;
+}
+
+.post-item {
+  text-align: center;
+}
+
+.post-item .post-list-item-title {
+  font-weight: 900;
+}
+
+.post-item .post-list-item-content {
+  color:#666666;
+  font-size: 0.9rem;
+  padding: 5px 0 12px 0;
+  border-bottom: 1px solid #cccccc;
 }
 
 .post-item-title {
